<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/secondary_color"
    tools:context=".LoginActivity">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.5" />

    <LinearLayout
        android:id="@+id/background"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:orientation="horizontal"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toBottomOf="@id/guideline"
        >

        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:scaleType="centerCrop"
            app:srcCompat="@drawable/background_app" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintTop_toBottomOf="@id/background"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:background="@color/white"
        >

        <TextView
            android:id="@+id/textView2"
            android:layout_width="350dp"
            android:layout_height="wrap_content"
            android:text="@string/recover_password"
            android:textAlignment="center"
            android:layout_marginTop="35dp"
            android:layout_marginBottom="35dp"
            android:textSize="24sp"
            android:textStyle="bold"
            android:textColor="@color/text_color"
            />

        <TextView
            android:id="@+id/textView3"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:text="@string/recover_text"
            android:textColor="@color/text_color"
            android:textAlignment="center"
            android:textSize="18sp"
            android:layout_gravity="center"
            android:layout_marginBottom="30dp"/>

        <EditText
            android:id="@+id/email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/institutional_email"
            android:inputType="textEmailAddress"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/code"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="15dp"
                android:layout_marginEnd="20dp"
                android:ems="8"
                android:hint="@string/code"
                android:inputType="text" />

            <Button
                android:id="@+id/sendCodeButton"
                android:layout_gravity="bottom"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/secondary_color"
                android:textColor="@color/white"
                android:textStyle="italic"
                android:text="@string/send_code" />
        </LinearLayout>

        <Button
            android:id="@+id/recoverButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="50dp"
            android:layout_marginStart="50dp"
            android:layout_marginBottom="30dp"
            android:textSize="20sp"
            android:layout_marginTop="45dp"
            android:layout_gravity="center"
            android:backgroundTint="@color/main_color"
            android:text="@string/recover" />

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>