<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:id="@+id/activity_billetera"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/background_color"
        tools:context=".BilleteraActivity">

    <LinearLayout
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/white"
            android:elevation="4dp"
            android:orientation="horizontal"
            android:padding="16dp"
            app:layout_constraintTop_toTopOf="parent">

        <ImageButton
                android:id="@+id/btnBackBilletera"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:background="?attr/selectableItemBackgroundBorderless"
                android:contentDescription="@string/back"
                android:scaleType="fitCenter"
                android:src="@android:drawable/ic_menu_revert" />

        <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_weight="1"
                android:text="@string/titulo_billetera"
                android:textColor="@color/text_color"
                android:textSize="18sp"
                android:textStyle="bold" />
    </LinearLayout>

    <androidx.cardview.widget.CardView
            android:id="@+id/card_billetera"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="24dp"
            android:backgroundTint="@color/component_background"
            app:cardCornerRadius="20dp"
            app:cardElevation="4dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/toolbar"
            app:layout_constraintVertical_bias="0.3">

        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:orientation="vertical"
                android:padding="24dp">

            <TextView
                    android:id="@+id/tvTituloBilletera"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/titulo_billetera"
                    android:textColor="@color/text_color"
                    android:textSize="24sp"
                    android:textStyle="bold" />

            <androidx.cardview.widget.CardView
                    android:id="@+id/card_saldos"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="24dp"
                    android:backgroundTint="@color/main_color"
                    app:cardCornerRadius="20dp"
                    app:cardElevation="2dp"
                    app:cardUseCompatPadding="true">

                <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        android:padding="24dp">

                    <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginBottom="16dp"
                            android:gravity="center_vertical"
                            android:orientation="horizontal">

                        <ImageView
                                android:id="@+id/imgSaldoAFavor"
                                android:layout_width="24dp"
                                android:layout_height="24dp"
                                android:contentDescription="@string/saldo_a_favor"
                                android:src="@android:drawable/ic_input_add" />

                        <TextView
                                android:id="@+id/tvSaldoAFavor"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginStart="8dp"
                                android:text="@string/saldo_a_favor"
                                android:textColor="@android:color/white"
                                android:textSize="16sp" />
                    </LinearLayout>

                    <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:gravity="center_vertical"
                            android:orientation="horizontal">

                        <ImageView
                                android:id="@+id/imgDeuda"
                                android:layout_width="24dp"
                                android:layout_height="24dp"
                                android:contentDescription="@string/deuda"
                                android:src="@android:drawable/ic_dialog_alert" />

                        <TextView
                                android:id="@+id/tvDeuda"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginStart="8dp"
                                android:text="@string/deuda"
                                android:textColor="@android:color/white"
                                android:textSize="16sp" />
                    </LinearLayout>
                </LinearLayout>
            </androidx.cardview.widget.CardView>

            <Button
                    android:id="@+id/btnDepositar"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:layout_marginTop="24dp"
                    android:backgroundTint="@color/main_color"
                    android:text="@string/depositar_tarjeta"
                    android:textColor="@color/white"
                    android:textSize="16sp" />

            <Button
                    android:id="@+id/btnSalir"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:layout_marginTop="16dp"
                    android:backgroundTint="@color/secondary_color"
                    android:text="@string/salir"
                    android:textColor="@color/text_color"
                    android:textSize="16sp" />
        </LinearLayout>
    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>